# The-Bank-Console

./: .gitignore  CMakeLists.txt  README.md  account.h  bankDatabase.db  checkUserInput.h  classes.h  conversionRate.h  conversion_rates.csv  main.cpp  test.cpp  user.h
Rapporter/: Boilerroom_rapport_12-01.rtf
headerFiles/: account.h  checkUserInput.h  cmake_install.cmake  fillData.h  login.h  user.h
headerFiles/sqlite3/: cmake_install.cmake
